Q2 done with O(n)